# EnginX

./: .gitignore  CMakeLists.txt  README.md
enginx/: CMakeLists.txt
enginx/Utility/assert/: asserts.cpp  asserts.hpp
enginx/core/file_handler/: file_handler.hpp
enginx/include/: defines.h
enginx/include/Utility/logger/: logger.hpp
enginx/include/enginx/: defines.h  platform_detection.h
enginx/include/enginx/core/file_handler/: file_handler.hpp
enginx/include/enginx/core/window/: window.hpp
enginx/include/enginx/platform/: init.hpp
enginx/include/enginx/platform/linux/X11/: X11Window.hpp
enginx/include/enginx/platform/linux/X11/internal/: connect.hpp  screen.hpp
enginx/include/enginx/platform/linux/x11/: X11Window.hpp
enginx/include/enginx/platform/windows/WIN32/: win32Window.hpp
enginx/src/Utility/logger/: logger.cpp
enginx/src/core/file_handler/: file_handler.cpp
enginx/src/core/window/: window.cpp
enginx/src/platform/: init.cpp
enginx/src/platform/linux/X11/internal/: connect.cpp  screen.cpp
enginx/src/platform/linux/x11/internal/: connect.cpp  screen.cpp
enginx/src/utility/logger/: logger.cpp
